# MNIST

./: CMakeLists.txt
src/: Canvas.cpp  Canvas.h  Perceptron.cpp  main.cpp
